@@ -39,15 +39,18 @@ tests =  \
 testhelper.la: $(testhelper_la_OBJECTS) $(testhelper_la_DEPENDENCIES)
 	$(LINK) -rpath $(pkgpyexecdir) $(testhelper_la_LDFLAGS) $(testhelper_la_OBJECTS) $(testhelper_la_LIBADD) $(LIBS)
 
-check-local: $(top_srcdir)/gobject/__init__.py $(top_srcdir)/gio/__init__.py
+check-local: $(top_srcdir)/glib/__init__.py $(top_srcdir)/gobject/__init__.py $(top_srcdir)/gio/__init__.py
 	@if test "$(top_builddir)" != "$(top_srcdir)"; then \
+	   cp $(top_srcdir)/glib/*.py $(top_builddir)/glib; \
 	   cp $(top_srcdir)/gobject/*.py $(top_builddir)/gobject; \
 	   cp $(top_srcdir)/gio/*.py $(top_builddir)/gio; \
 	fi
 	@$(PYTHON) $(srcdir)/runtests.py $(top_builddir) $(top_srcdir)
 	@if test "$(top_builddir)" != "$(top_srcdir)"; then \
+	   rm -f $(top_builddir)/glib/*.py; \
 	   rm -f $(top_builddir)/gobject/*.py; \
 	   rm -f $(top_builddir)/gio/*.py; \
 	fi
+	@rm -fr $(top_builddir)/glib/*.pyc
 	@rm -fr $(top_builddir)/gobject/*.pyc
 	@rm -fr $(top_builddir)/gio/*.pyc
